style scrollbar, fixed screen behind modal, close solution fragment after close modal

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@ $color-black: #000;
 $color-gray: #aaa;
 $box-shadow-thin: 0 3px 8px -3px $color-dark;
 $box-shadow-bold: 3px 3px 10px 2px $color-black;
+$box-shadow-scroll: inset 0 0 6px rgba(0, 0, 0, .3);
 $border-radius-small: 5px;
 $border-radius-big: 50px;
 $transition: .1s ease-in;
@@ -18,6 +19,25 @@ $transition: .1s ease-in;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+}
+
+@mixin styleScroll {
+  &::-webkit-scrollbar {
+    width: .8rem;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $bgc-tertiary;
+    border-radius: $border-radius-small;
+    box-shadow: $box-shadow-scroll;
+    -webkit-box-shadow: $box-shadow-scroll;
+  }
+
+  &::-webkit-scrollbar-track {
+    border-radius: $border-radius-small;
+    box-shadow: $box-shadow-scroll;
+    -webkit-box-shadow: $box-shadow-scroll;
+  }
 }
 
 *,
@@ -37,7 +57,9 @@ body {
   color: $color-dark;
   font-family: $font-stack;
   font-size: $font-size-default;
+  @include styleScroll;
 }
+
 
 ul {
   list-style: none;
@@ -116,7 +138,6 @@ ul {
   background: $bgc-primary;
   color: $color-dark;
   border-radius: $border-radius-small;
-  // text-align: center;
   font-size: 1.8rem;
 
   &--isActive {
@@ -140,7 +161,6 @@ pre {
 }
 
 .modal {
-  // position: fixed;
   display: none;
   top: 50%;
   left: 50%;
@@ -153,6 +173,8 @@ pre {
   box-shadow: $box-shadow-bold;
   border-radius: $border-radius-small;
   z-index: 2;
+  overflow-y: auto;
+  @include styleScroll;
 
   &--isActive {
     display: block;
